force-app/main/default/objects/PBS_AAAP_Offer_Select_Award_Info__c/PBS_AAAP_Offer_Select_Award_Info__c.object-meta.xml
<CustomObject>
    <description>This is the Offer_Select_Award_Info table in the source AAAP system.</description>
    <label>Offer Select Award Info</label>
    <nameField>
        <displayFormat>OSAI-{00000000}</displayFormat>
        <label>Offer Select Award Info Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offer Select Award Info</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>