force-app/main/default/objects/PBS_AAAP_Offer_Select_Award_Info__c/fields/Non_reserved_surface_Spaces_for_GOVs__c.field-meta.xml
<CustomField>
    <fullName>Non_reserved_surface_Spaces_for_GOVs__c</fullName>
    <label>Non-reserved surface Spaces for GOVs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>