force-app/main/default/objects/PBS_AAAP_Offer_Select_Award_Info__c/fields/PBS_AAAP_ACTUAL_TI_AMORTIZED_INTO_RENT__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_ACTUAL_TI_AMORTIZED_INTO_RENT__c</fullName>
    <label>Actual Ti Amortized Into Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>