force-app/main/default/objects/PBS_AAAP_Offer_Select_Award_Info__c/fields/PBS_AAAP_ADDTL_AMT_DAY_CLEANING__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_ADDTL_AMT_DAY_CLEANING__c</fullName>
    <label>Addtl Amt Day Cleaning</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>