force-app/main/default/objects/PBS_AAAP_Offer_Select_Award_Info__c/fields/PBS_AAAP_Adjustment_for_Vacant_Premises__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Adjustment_for_Vacant_Premises__c</fullName>
    <label>Adjustment for Vacant Premises</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>