force-app/main/default/objects/PBS_AAAP_Offer_Select_Award_Info__c/fields/PBS_AAAP_AMORTIZ_RATE_T1_UPTO_20__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_AMORTIZ_RATE_T1_UPTO_20__c</fullName>
    <label>Awarded Amortiz Ti Upto 20</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>