force-app/main/default/objects/PBS_AAAP_Offer_Select_Award_Info__c/fields/PBS_AAAP_ANNUAL_AMORT_TI_COSTS__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_ANNUAL_AMORT_TI_COSTS__c</fullName>
    <label>ACTUAL TI AMORTIZED INTO RENT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>