force-app/main/default/objects/PBS_AAAP_Offer_Select_Award_Info__c/fields/PBS_AAAP_Awarded_Common_Area_Factor_as__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Awarded_Common_Area_Factor_as__c</fullName>
    <label>Awarded Common Area Factor as %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>