force-app/main/default/objects/PBS_AAAP_Offer_Select_Award_Info__c/fields/PBS_AAAP_Awarded_Total_Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Awarded_Total_Contract_Value__c</fullName>
    <label>Awarded Total Contract Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>