force-app/main/default/objects/PBS_AAAP_Offer_Select_Award_Info__c/fields/PBS_AAAP_AWARDED_USF_Temp__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_AWARDED_USF_Temp__c</fullName>
    <label>SYSTEM1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>