force-app/main/default/objects/PBS_AAAP_Offer_Select_Award_Info__c/fields/PBS_AAAP_BASE_COST_SRVC_UTIL_PER_ABOA__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_BASE_COST_SRVC_UTIL_PER_ABOA__c</fullName>
    <label>Awarded Base Operating Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>