force-app/main/default/objects/PBS_AAAP_Offer_Select_Award_Info__c/fields/PBS_AAAP_BSAC_Amortization_Rate__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_BSAC_Amortization_Rate__c</fullName>
    <label>BSAC Amortization Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>