force-app/main/default/objects/PBS_AAAP_Offer_Select_Award_Info__c/fields/PBS_AAAP_BSAC_Per_Year__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_BSAC_Per_Year__c</fullName>
    <label>Firm Term BSAC Per Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>