force-app/main/default/objects/PBS_AAAP_Offer_Select_Award_Info__c/fields/PBS_AAAP_CONTRACT_AWARD_DATE__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_CONTRACT_AWARD_DATE__c</fullName>
    <label>Contract_Award_Date</label>
    <type>Date</type>
</CustomField>