force-app/main/default/objects/PBS_AAAP_Offer_Select_Award_Info__c/fields/PBS_AAAP_COOP_COMM_TOGSA_FIRM_TERM__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_COOP_COMM_TOGSA_FIRM_TERM__c</fullName>
    <label>COOP Brokerage Comission Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>