force-app/main/default/objects/PBS_AAAP_Offer_Select_Award_Info__c/fields/PBS_AAAP_Free_Rent__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Free_Rent__c</fullName>
    <label>Free Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>