force-app/main/default/objects/PBS_AAAP_Offer_Select_Award_Info__c/fields/PBS_AAAP_FULLY_SRVC_FIRM_TERM__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_FULLY_SRVC_FIRM_TERM__c</fullName>
    <label>Full Serv Rent Firm Term</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>