force-app/main/default/objects/PBS_AAAP_Offer_Select_Award_Info__c/fields/PBS_AAAP_GREX_Project_Number__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_GREX_Project_Number__c</fullName>
    <label>GREX Project Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>