force-app/main/default/objects/PBS_AAAP_Offer_Select_Award_Info__c/fields/PBS_AAAP_HVAC_Overtime_Rate_per_Hour__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_HVAC_Overtime_Rate_per_Hour__c</fullName>
    <label>HVAC Overtime Rate per Hour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>