force-app/main/default/objects/PBS_AAAP_Offer_Select_Award_Info__c/fields/PBS_AAAP_LCRM_PRE_AWARD__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_LCRM_PRE_AWARD__c</fullName>
    <label>LCRM Pre-award</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>