force-app/main/default/objects/PBS_AAAP_Offer_Select_Award_Info__c/fields/PBS_AAAP_LEASE_EXPIRATION_DATE__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_LEASE_EXPIRATION_DATE__c</fullName>
    <label>Lease_Expiration_Date</label>
    <type>Date</type>
</CustomField>