force-app/main/default/objects/PBS_AAAP_Offer_Select_Award_Info__c/fields/PBS_AAAP_Lease_Term__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Lease_Term__c</fullName>
    <label>Lease Term</label>
    <length>20</length>
    <type>Text</type>
</CustomField>