force-app/main/default/objects/PBS_AAAP_Offer_Select_Award_Info__c/fields/PBS_AAAP_Lessor_PM_Fee__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Lessor_PM_Fee__c</fullName>
    <label>Lessor PM Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>