force-app/main/default/objects/PBS_AAAP_Offer_Select_Award_Info__c/fields/PBS_AAAP_MONTHLY_COST_NONRESPARK_SURLOT__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_MONTHLY_COST_NONRESPARK_SURLOT__c</fullName>
    <label>Monthly Cost Nonrespark Surlot</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>