force-app/main/default/objects/PBS_AAAP_Offer_Select_Award_Info__c/fields/PBS_AAAP_NEW_GSA_LEASE_NUM__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_NEW_GSA_LEASE_NUM__c</fullName>
    <label>New GSA Lease Num</label>
    <length>20</length>
    <type>Text</type>
</CustomField>