force-app/main/default/objects/PBS_AAAP_Offer_Select_Award_Info__c/fields/PBS_AAAP_NO_OF_MONTHS_FREE_FIRM_TERM__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_NO_OF_MONTHS_FREE_FIRM_TERM__c</fullName>
    <label>No Of Months Free Firm Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>