force-app/main/default/objects/PBS_AAAP_Offer_Select_Award_Info__c/fields/PBS_AAAP_Offer_ID__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Offer_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Offer ID</label>
    <referenceTo>PBS_AAAP_Offer__c</referenceTo>
    <relationshipLabel>Offer Select Award Info</relationshipLabel>
    <relationshipName>Offer_Select_Award_Info</relationshipName>
    <type>Lookup</type>
</CustomField>