force-app/main/default/objects/PBS_AAAP_Offer_Select_Award_Info__c/fields/PBS_AAAP_Offer_Submission_Timezone__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Offer_Submission_Timezone__c</fullName>
    <label>Offer Submission Timezone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>