force-app/main/default/objects/PBS_AAAP_Offer_Select_Award_Info__c/fields/PBS_AAAP_Operating_Costs_Per_RSF__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Operating_Costs_Per_RSF__c</fullName>
    <label>Firm Term Operating Costs Per RSF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>