force-app/main/default/objects/PBS_AAAP_Offer_Select_Award_Info__c/fields/PBS_AAAP_OT_RATE_COOLING_HEAT__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_OT_RATE_COOLING_HEAT__c</fullName>
    <label>Ot Rate Cooling Heat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>