force-app/main/default/objects/PBS_AAAP_Offer_Select_Award_Info__c/fields/PBS_AAAP_Parking_for_govt_owned_vehicles__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Parking_for_govt_owned_vehicles__c</fullName>
    <label>Num of Parking for govt owned vehicles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>