force-app/main/default/objects/PBS_AAAP_Offer_Select_Award_Info__c/fields/PBS_AAAP_PV_RATE__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_PV_RATE__c</fullName>
    <label>PV Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>