force-app/main/default/objects/PBS_AAAP_Offer_Select_Award_Info__c/fields/PBS_AAAP_Rate_ID__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Rate_ID__c</fullName>
    <label>Rate ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>