force-app/main/default/objects/PBS_AAAP_Offer_Select_Award_Info__c/fields/PBS_AAAP_Recorded_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Recorded_Owner_Email__c</fullName>
    <label>Recorded Owner Email</label>
    <type>Email</type>
</CustomField>