force-app/main/default/objects/PBS_AAAP_Offer_Select_Award_Info__c/fields/PBS_AAAP_Request__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Request__c</fullName>
    <label>Request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>