force-app/main/default/objects/PBS_AAAP_Offer_Select_Award_Info__c/fields/PBS_AAAP_Selected_Offer_State__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Selected_Offer_State__c</fullName>
    <formula>TEXT(PBS_AAAP_Offer_ID__r.PBS_AAAP_State__c)</formula>
    <label>Selected Offer State</label>
    <type>Text</type>
</CustomField>