force-app/main/default/objects/PBS_AAAP_Offer_Select_Award_Info__c/fields/PBS_AAAP_Selected_Offer_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Selected_Offer_Street_Address__c</fullName>
    <formula>PBS_AAAP_Offer_ID__r.PBS_AAAP_Street_Address__c  &amp; &apos;, &apos; &amp;  PBS_AAAP_Offer_ID__r.PBS_AAAP_City__c</formula>
    <label>Selected Offer Street Address</label>
    <type>Text</type>
</CustomField>