force-app/main/default/objects/PBS_AAAP_Offer_Select_Award_Info__c/fields/PBS_AAAP_SELECTED_USF__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_SELECTED_USF__c</fullName>
    <label>Selected USF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>