force-app/main/default/objects/PBS_AAAP_Offer_Select_Award_Info__c/fields/PBS_AAAP_Shell_Rent_Per_Year_NFT__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Shell_Rent_Per_Year_NFT__c</fullName>
    <label>Shell Rent Per Year NFT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>