force-app/main/default/objects/PBS_AAAP_Offer_Select_Award_Info__c/fields/PBS_AAAP_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Status_Code__c</fullName>
    <label>Status Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>