force-app/main/default/objects/PBS_AAAP_Offer_Select_Award_Info__c/fields/PBS_AAAP_Submission_DateTime__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Submission_DateTime__c</fullName>
    <label>Offer Submission DateTime</label>
    <type>DateTime</type>
</CustomField>