force-app/main/default/objects/PBS_AAAP_Offer_Select_Award_Info__c/fields/PBS_AAAP_Tenant_Improvement_Rent_Per_RSF__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Tenant_Improvement_Rent_Per_RSF__c</fullName>
    <label>Firm Term TI Rent per RSF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>