force-app/main/default/objects/PBS_AAAP_Offer_Select_Award_Info__c/fields/PBS_AAAP_TI_Allowance__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_TI_Allowance__c</fullName>
    <label>TI Allowance</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>