force-app/main/default/objects/PBS_AAAP_Offer_Select_Award_Info__c/fields/PBS_AAAP_TI_Amortization_Term__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_TI_Amortization_Term__c</fullName>
    <label>TI Amortization Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>