force-app/main/default/objects/PBS_AAAP_Offer_Select_Award_Info__c/fields/PBS_AAAP_Total_Annual_Rent_Per_ABOA_NFT__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Total_Annual_Rent_Per_ABOA_NFT__c</fullName>
    <label>Non-Firm Term Total Annual Rent Per ABOA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>