force-app/main/default/objects/PBS_AAAP_Offer_Select_Award_Info__c/fields/PBS_AAAP_Total_Contract_Amount__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Total_Contract_Amount__c</fullName>
    <label>Total Contract Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>