force-app/main/default/objects/PBS_AAAP_Offer_Select_Award_Info__c/fields/PBS_AAAP_TOTAL_MARKUP__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_TOTAL_MARKUP__c</fullName>
    <label>Total Cons Markup</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>