force-app/main/default/objects/PBS_AAAP_Offer_Select_Award_Info__c/fields/PBS_AAAP_Unreserved_Surface__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Unreserved_Surface__c</fullName>
    <label>Unreserved Surface</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>