force-app/main/default/objects/PBS_AAAP_Offer_Select_Award_Info__c/fields/Percentage_Occupancy_by_RSF__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Occupancy_by_RSF__c</fullName>
    <label>Percentage Occupancy (by RSF)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>