force-app/main/default/objects/PBS_AAAP_Offer_Select_Award_Info__c/fields/Reserved_Surface_Spaces_for_GOVs__c.field-meta.xml
<CustomField>
    <fullName>Reserved_Surface_Spaces_for_GOVs__c</fullName>
    <label>Reserved Surface Spaces for GOVs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>