force-app/main/default/objects/PBS_AAAP_Offer_Select_Award_Info__c/fields/Unreserved_Structured_spaces_for_GOVs__c.field-meta.xml
<CustomField>
    <fullName>Unreserved_Structured_spaces_for_GOVs__c</fullName>
    <label>Unreserved Structured spaces for GOVs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>