force-app/main/default/objects/PBS_AAAP_Offer_Select_Award_Info__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>PBS_AAAP_isSelected__c</columns>
    <columns>PBS_AAAP_IsAwarded__c</columns>
    <columns>PBS_AAAP_AGENCY_REQUIREMENT_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>