force-app/main/default/objects/PBS_AAAP_Offer_Select_Award_Info__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>PBS_AAAP_IsAwarded__c</columns>
    <columns>PBS_AAAP_isSelected__c</columns>
    <columns>PBS_AAAP_OFFER_SELECTION_DATE__c</columns>
    <columns>PBS_AAAP_AGENCY_REQUIREMENT_ID__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>